src/modules/vpc/routes.tf
#########################################
# Публічний маршрут (IGW)
#########################################
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.this.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.this.id
  }
  tags = { Name = "${var.vpc_name}-public-rt" }
}

resource "aws_route_table_association" "public" {
  count          = length(aws_subnet.public)
  subnet_id      = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.public.id
}

#########################################
# Приватні маршрути (NAT GW)
#########################################
resource "aws_route_table" "private" {
  count  = length(var.availability_zones) # 3 RT — по AZ
  vpc_id = aws_vpc.this.id
  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.this.id
  }
  tags = { Name = "${var.vpc_name}-private-rt-${count.index + 1}" }
}

resource "aws_route_table_association" "private" {
  count     = length(aws_subnet.private)
  subnet_id = aws_subnet.private[count.index].id
  route_table_id = element(aws_route_table.private[*].id,
  count.index % length(aws_route_table.private))
}
